maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:14: error: type mismatch;
 found   : Boolean
 required: Int
if(aMurNord(Xo,Yo==false)) {
                 ^JediEscaper:17: error: type mismatch;
 found   : Boolean
 required: Int
if(aMurOuest(Xo,Yo==false)) {
                  ^