maze.lessons.maze.shortestpath.ShortestPathMaze.scala.code
override def run() {
var Xo:Int=0
var Yo:Int=0
val Xmax=getMondeLargeur-1
val Ymax=getMondeHauteur-1
for (x<-0 to Xmax; y<-0 to Ymax) {
	if(aBiscuit(x,y)==true) {
		Xo=x
		Yo=y
		setIndication(Xo,Yo,0)
	}
}//pose le 0 et garde ses coordonnées
if(aMurNord(Xo,Yo==false)) {
	setIndication(Xo,Yo-1,1)
}
if(aMurOuest(Xo,Yo==false)) {
	setIndication(Xo-1,Yo,1)
}
}